# FileCat

./: Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
src/handlers/: csv_handler.rs  default.rs  mod.rs
