[package]
name = "file_cat"
version = "0.2.0"
edition = "2021"
authors = ["LordOfPolls <dev@lordofpolls.com"]
license = "MIT"
description = "A directory concatinator"
readme = "README.md"
homepage = "https://github.com/LordOfPolls/FileCat"
repository = "https://github.com/LordOfPolls/FileCat"
categories = ["command-line-utilities"]
keywords = ["file", "concatenation", "directory", "cli", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"